# barista

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
barista/: hamiltonian.h  hamiltonian2.h  hamiltonian_anasazi.h  hamiltonian_dense.h  hamiltonian_dense_mpi.h  hamiltonian_elemental.h  hamiltonian_scalapack.h  hamiltonian_scalapack_wrapping.h  hamiltonian_slepc.h  hamiltonian_slepc.h.old
compile_script/: compile_barista_anasazi_fx10.sh  compile_barista_anasazi_phi.sh  compile_barista_eigenK.sh  compile_barista_phi.sh  fapp_large_job_barista_eigen_s.sh  fipp_job_barista_anasazi_fx10_bunshi.sh  fipp_job_barista_eigen_s.sh  fipp_large_job_barista_eigen_s.sh  job_barista_anasazi_fx10.sh  job_barista_eigen_s.sh
config/: FindEigen3.cmake  FindPETSc2.cmake  FindSLEPc2.cmake
sample/: CMakeLists.txt  CTestTestfile.cmake  MatrixXd.op  dense.cpp  dense_mpi.cpp  eigen.C  hamiltonian_matrix.C  hamiltonian_matrix.ip  hamiltonian_matrix.op  hamiltonian_matrix_Anasazi_LOBPCG.cpp  hamiltonian_matrix_Anasazi_LOBPCG_globalmat.cpp  hamiltonian_matrix_Eigen.C  hamiltonian_matrix_dense.cpp  hamiltonian_matrix_eigenK.C  hamiltonian_matrix_eigen_s.C  hamiltonian_matrix_eigen_s_wrapping.C  hamiltonian_matrix_eigen_sx.C  hamiltonian_matrix_elemental.cpp  hamiltonian_matrix_scalapack_pdsyev.C  hamiltonian_matrix_scalapack_pdsyev_globalmat.C  hamiltonian_matrix_scalapack_pdsyev_wrapping.C  hamiltonian_matrix_slepc.C  hamiltonian_matrix_slepc_globalmat.C  hamiltonian_matrix_slepc_globalmat_values.C  lattice_hexagon.xml  model_alpha.xml  parm_alpha.in
sample_elemental/: CMakeLists.txt  SymmetricEig.cpp  SymmetricEig_frank.cpp  SymmetricEig_frank_localmat.cpp
test/: CMakeLists.txt  frank_mpi.cpp  hamiltonian.cpp  hamiltonian_mpi.cpp
